<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="@dimen/weather_state_icon_size"
                android:layout_height="@dimen/weather_state_icon_size"
                android:contentDescription="@string/weather_state_icon"
                app:srcCompat="@android:drawable/picture_frame" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/na_data"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/na_data"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/separator_city_updated_at"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/words_separator"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na_data"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:focusedByDefault="true"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:focusedByDefault="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_city_text_input"
                    android:layout_width="320dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:focusedByDefault="false"
                    android:hint="@string/city_input_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/change_city_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/save_value_button_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="425dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/invalid_city_warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/invalid_city_warning_text"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>